# viberwhisper

./: .gitignore  AGENTS.md  Agents.md  CLAUDE.md  Cargo.toml  README.md  agent.md  changelog  config.example.json  pyproject.toml
.github/workflows/: ci.yml  pr-feedback-discord.yml  release.yml
assets/: Info.plist.ext
docs/: README.md  cross_platform_plan.md
docs/architecture/: audio.md  core.md  input.md  local.md  platform.md  postprocess.md  transcriber.md
docs/plan/: 02-toggle-recording.md  03-cross-platform.md  04-multiple-models.md  05-long-audio-streaming.md  06-end-to-end-stream-recognition.md  07-llm-transcription.md  08-llm-post-processing.md  09-floating-window.md  10-objc2-overlay-migration.md  10-packaging-and-ci.md  11-packaging-and-ci.md  12-local-gemma-service.md
server/: README.md  __init__.py  chat.py  models.py  requirements.txt  runtime.py  server.py  test_asr_client.py  transcription.py
server/tests/: integration_helpers.py  real_runtime_probe.py  test_chat.py  test_integration_inference.py  test_integration_runtime.py  test_runtime.py  test_server.py  test_transcription.py
src/: main.rs
src/audio/: mod.rs  recorder.rs  splitter.rs
src/core/: cli.rs  config.rs  mod.rs  orchestrator.rs
src/input/: hotkey.rs  mod.rs  tray.rs  typer.rs
src/input/overlay/: macos.rs  mod.rs  stub.rs  windows_impl.rs
src/local/: installer.rs  mod.rs  service.rs
src/platform/: macos.rs  windows.rs
src/postprocess/: factory.rs  llm.rs  mod.rs
src/transcriber/: api.rs  factory.rs  groq.rs  mod.rs
viberwhisper/: .gitignore  CLAUDE.md  Cargo.toml  README.md  changelog  config.json
viberwhisper/doc/: 01-global-hotkey-recording.md
viberwhisper/docs/: README.md  todo_new.md  toggle_recording_plan.md
viberwhisper/docs/features/: 01-global-hotkey-recording.md  logging_refactor_plan.md  tray_icon_plan.md
viberwhisper/src/: audio.rs  config.rs  hotkey.rs  main.rs  transcriber.rs  typer.rs  typer_macos.rs  typer_windows.rs
viberwhisper/src/core/: cli.rs
viberwhisper/src/input/: mod.rs  tray.rs
viberwhisper/src/platform/: windows.rs
viberwhisper/src/transcriber/: mod.rs
