[package]
name = "viberwhisper"
version = "0.1.0"
edition = "2024"

[features]
integration = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy", "integration"))'] }

[dependencies]
rdev = "0.5"
cpal = "0.15"
hound = "3.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tray-icon = "0.21"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSDate", "NSRunLoop", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSAppearance", "NSApplication", "NSBezierPath", "NSColor", "NSEvent", "NSGraphics", "NSResponder", "NSRunningApplication", "NSScreen", "NSView", "NSWindow"] }

[package.metadata.bundle]
name = "ViberWhisper"
identifier = "com.b1indsight.viberwhisper"
icon = ["assets/icon-32x32.png", "assets/icon-128x128.png", "assets/icon-256x256.png"]
copyright = "Copyright (c) 2026 b1indsight"
osx_minimum_system_version = "11.0"
short_description = "Voice-to-text input tool"
osx_info_plist_exts = ["assets/Info.plist.ext"]
