[project]
name = "viberwhisper-python"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["server/tests"]
pythonpath = ["."]
