[package]
name = "viberwhisper"
version = "0.1.0"
edition = "2024"

[dependencies]
rdev = "0.5"
cpal = "0.15"
hound = "3.5"
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tray-icon = "0.21"
